Synth: dat-ting module - firmware page - wip

--- a/site-files/synth/dat-ting/firmware-make.html
+++ b/site-files/synth/dat-ting/firmware-make.html
@@ -18,10 +18,10 @@
 <nav>
 <!--nav button--><label for="navCheck">&nbsp;</label><input type="checkbox" id="navCheck">
 <ul>
-<li><a href="#intro">Intro</a></li>
-<li><a href="#main">Main</a></li>
-<li><a href="#conclusion">Conclusion</a></li>
-<li>Back to <a href=".">[x]</a></li>
+<li><a href="#libraries">Libraries</a></li>
+<li><a href="#bootloader">Bootloader</a></li>
+<li><a href="#build">Build</a></li>
+<li>Back to <a href=".">dat-ting</a></li>
 <li><a href="/">Home</a></li>
 </ul>
 </nav>
@@ -29,50 +29,43 @@
 
 <main>
 
-<p>TODO: Clean up. Use headers instead of ul?</p>
-
 <aside><p>If you’re using Visual Studio Code for development,
 <a href="https://github.com/electro-smith/DaisyWiki/wiki/1.-Setting-Up-Your-Development-Environment#4a-flashing-the-daisy-via-usb">follow these instructions</a>
 to compile and download the firmware.
 </p></aside>
 
-<p>Here’s how to build and download the firmware for <em>dat-ting</em> from the command line (shell or Windows Command Prompt).</p>
+<p>Here’s how to build and download the firmware for the <em>dat-ting</em> module from the command line (shell or Windows Command Prompt).</p>
 
-<p><em>Note: I have used Linux/Mac-style pathnames with <kbd>/</kbd> as the directory separator. For the Windows Command Prompt, use <kbd>\</kbd> instead.</em></p>
+<p><em>Note: These instructions use Linux/Mac-style pathnames with <kbd>/</kbd> as the directory separator. For the Windows Command Prompt, use <kbd>\</kbd> instead.</em></p>
 
 <p><em>Note: In these instructions, replace <kbd><em>[repo-dir]</em></kbd> with the pathname of the <em>dat-ting</em> repository.</em></p>
-    
-<ul>
-<li>Build the Daisy libraries, if necessary.
-    (This only needs to be done the first time the firmware is compiled or if the libraries are updated.) Type these commands:</li>
+
+<h1><a name="libraries"></a>Libraries</h1>
+<p>Build the Daisy libraries, if necessary. This only needs to be done the first time the firmware is compiled or if the libraries are updated.</p>
 <code>cd <em>[repo-dir]</em>/lib/libDaisy
 make
 cd <em>[repo-dir]</em>/lib/DaisySP
 make
 </code>
-<li>Put the Daisy Seed into bootloader mode.</li>
-    <ul>
-    <li>Connect the Daisy Seed to the computer via USB.</li>
-    <li>Press <em>and hold</em> the <kbd>BOOT</kbd> button.</li>
-    <li>Press <em>and release</em> the <kbd>RESET</kbd> button.</li>
-    <li>Release the <kbd>BOOT</kbd> button.</li>
-    <li>The Seed’s on-board LED will start pulsing in a particular way to indicate bootloader mode.</li>
-    </ul>
-<li>Compile the firmware and download it to the Daisy Seed. Type these commands:</li>
+
+<h1><a name="bootloader"></a>Bootloader Mode</h1>
+<p>Put the Daisy Seed into bootloader mode.</p>
+<ul>
+<li>Connect the Daisy Seed to the computer via USB.</li>
+<li>Press <em>and hold</em> the <kbd>BOOT</kbd> button.</li>
+<li>Press <em>and release</em> the <kbd>RESET</kbd> button.</li>
+<li>Release the <kbd>BOOT</kbd> button.</li>
+<li>The Seed’s on-board LED will start pulsing in a particular way to indicate bootloader mode.</li>
+</ul>
+
+<h1><a name="build"></a>Build and Download</h1>
+<p>Compile the firmware and download it to the Daisy Seed.</p>
 <code>cd <em>[repo-dir]</em>/firmware/src
 make all program-dfu
 </code>
-</ul>
 
-<h1><a name="intro"></a>Intro</h1>
+<p>After downloading, the Daisy Seed will reboot and the bootup sequence will be displayed on the module’s OLED display.</p>
 
-<p>Introduction.</p>
-
-<h1><a name="main"></a>Main</h1>
-<p>Main section.</p>
-
-<h1><a name="conclusion"></a>Conclusion</h1>
-<p>Final section.</p>
 </main>
 
 <footer><g-row><g-col style="width: 110px; vertical-align: middle">
