Synth: dat ting module name correction

--- a/site-files/synth/dat-ting/firmware-make.html
+++ b/site-files/synth/dat-ting/firmware-make.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-CA">
 <head>
-<title>Building Firmware - dat-ting - Len’s Stuff</title>
+<title>Building Firmware - dat ting - Len’s Stuff</title>
 <meta name="author" content="Len Popp">
 <link rel="license" href="#license">
 <meta charset="utf-8">
@@ -12,7 +12,7 @@
 <header>
 <hgroup>
 <a href="/"><img src="/assets/logo.jpg" class="logo" alt="home"></a>
-<h1>dat-ting &ndash; Build the Firmware</h1>
+<h1>dat ting &ndash; Build the Firmware</h1>
 <p>Compile and download firmware from the command line</p>
 </hgroup>
 <nav>
@@ -21,7 +21,7 @@
 <li><a href="#libraries">Libraries</a></li>
 <li><a href="#bootloader">Bootloader</a></li>
 <li><a href="#build">Build</a></li>
-<li>Back to <a href=".">dat-ting</a></li>
+<li>Back to <a href=".">dat ting</a></li>
 <li><a href="/">Home</a></li>
 </ul>
 </nav>
@@ -34,11 +34,11 @@
 to compile and download the firmware.
 </p></aside>
 
-<p>Here’s how to build and download the firmware for the <em>dat-ting</em> module from the command line (shell or Windows Command Prompt).</p>
+<p>Here’s how to build and download the firmware for the <em>dat ting</em> module from the command line (shell or Windows Command Prompt).</p>
 
 <p><em>Note: These instructions use Linux/Mac-style pathnames with <kbd>/</kbd> as the directory separator. For the Windows Command Prompt, use <kbd>\</kbd> instead.</em></p>
 
-<p><em>Note: In these instructions, replace <kbd><em>[repo-dir]</em></kbd> with the pathname of the <em>dat-ting</em> repository.</em></p>
+<p><em>Note: In these instructions, replace <kbd><em>[repo-dir]</em></kbd> with the pathname of the <em>dat ting</em> repository.</em></p>
 
 <h1><a name="libraries"></a>Libraries</h1>
 <p>Build the Daisy libraries, if necessary. This only needs to be done the first time the firmware is compiled or if the libraries are updated.</p>
