--- a/site-files/synth/dat-ting/firmware.html
+++ b/site-files/synth/dat-ting/firmware.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-CA">
 <head>
-<title>Firmware - dat-ting - Len’s Stuff</title>
+<title>Firmware - dat ting - Len’s Stuff</title>
 <meta name="author" content="Len Popp">
 <link rel="license" href="#license">
 <meta charset="utf-8">
@@ -12,8 +12,8 @@
 <header>
 <hgroup>
 <a href="/"><img src="/assets/logo.jpg" class="logo" alt="home"></a>
-<h1>dat-ting Firmware</h1>
-<p>Firmware for the dat-ting module</p>
+<h1>dat ting Firmware</h1>
+<p>Firmware for the dat ting module</p>
 </hgroup>
 <nav>
 <!--nav button--><label for="navCheck">&nbsp;</label><input type="checkbox" id="navCheck">
@@ -21,7 +21,7 @@
 <li><a href="#building">Building</a></li>
 <li><a href="#overview">Overview</a></li>
 <li><a href="#tools">Tools</a></li>
-<li>Back to <a href=".">dat-ting</a></li>
+<li>Back to <a href=".">dat ting</a></li>
 <li><a href="/">Home</a></li>
 </ul>
 </nav>
@@ -30,7 +30,7 @@
 <main>
 
 <aside><img src="firmware.png" alt="source code"></aside>
-<p>The <a href="index.html"><em>dat-ting</em> Eurorack module</a> is based on a
+<p>The <a href="index.html"><em>dat ting</em> Eurorack module</a> is based on a
 <a href="https://electro-smith.com/products/daisy-seed">Daisy Seed</a> microcontroller board.
 The microcontroller firmware is open source and is published under the
 <a href="https://github.com/Len42/dat-ting/blob/main/firmware/LICENSE">MIT license</a>.
@@ -67,7 +67,7 @@ to compile the firmware and download it to the Daisy Seed via USB.</p>
 <a href="https://github.com/electro-smith/DaisySP">DaisySP</a>).
 These libraries implement a host of useful DSP algorithms which do most of the actual audio processing.</p>
 
-<p><em>dat-ting</em> is a multi-function module so the firmware is organized around a set of <em>programs.</em> Each program implements a particular function such as VCO or delay.
+<p><em>dat ting</em> is a multi-function module so the firmware is organized around a set of <em>programs.</em> Each program implements a particular function such as VCO or delay.
 Audio and CV processing is done by the currently-running program, which implements an audio callback function that is called by libDaisy.</p>
 
 <p>I have implemented several programs so far and I’m adding more as I need them.
