--- a/site-files/synth/dat-ting/hardware.html
+++ b/site-files/synth/dat-ting/hardware.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-CA">
 <head>
-<title>Hardware - dat-ting - Len’s Stuff</title>
+<title>Hardware - dat ting - Len’s Stuff</title>
 <meta name="author" content="Len Popp">
 <link rel="license" href="#license">
 <meta charset="utf-8">
@@ -12,8 +12,8 @@
 <header>
 <hgroup>
 <a href="/"><img src="/assets/logo.jpg" class="logo" alt="home"></a>
-<h1>dat-ting Hardware</h1>
-<p>Hardware design of the dat-ting module</p>
+<h1>dat ting Hardware</h1>
+<p>Hardware design of the dat ting module</p>
 </hgroup>
 <nav>
 <!--nav button--><label for="navCheck">&nbsp;</label><input type="checkbox" id="navCheck">
@@ -23,7 +23,7 @@
 <li><a href="#pcbs">PCBs</a></li>
 <li><a href="#schematic">Schematic</a></li>
 <li><a href="#tools">Tools</a></li>
-<li>Back to <a href=".">dat-ting</a></li>
+<li>Back to <a href=".">dat ting</a></li>
 <li><a href="/">Home</a></li>
 </ul>
 </nav>
@@ -31,10 +31,10 @@
 
 <main>
 
-<p><em>dat-ting</em> is a 10HP multi-function Eurorack DSP module.
+<p><em>dat ting</em> is a 10HP multi-function Eurorack DSP module.
 Hardware and software are open source. GitHub repository is <a href="https://github.com/Len42/dat-ting">here</a>.</p>
 
-<aside><a href="board2.jpg"><img src="board2.jpg" alt="dat-ting PCB"></a></aside>
+<aside><a href="board2.jpg"><img src="board2.jpg" alt="dat ting PCB"></a></aside>
 
 <h1><a name="features"></a>Hardware Features</h1>
 <ul>
@@ -53,7 +53,7 @@ Hardware and software are open source. GitHub repository is <a href="https://git
 <h1><a name="notes"></a>Notes</h1>
 <p>Please note that I am a hobbyist, not a trained electronics engineer. No guarantees!</p>
 
-<p><em>dat-ting</em> is open source hardware. The hardware design is
+<p><em>dat ting</em> is open source hardware. The hardware design is
 published under the <a href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution license</a>.
 Firmware is published under the <a href="https://github.com/Len42/dat-ting/blob/main/firmware/LICENSE">MIT license</a>.</p>
 
@@ -64,7 +64,7 @@ The microcontroller board is powered by either the USB connection or the Eurorac
 
 <p>For the USB connection, I have the USB cable running through a hole in the front panel and a right-angle adapter to the Daisy Seed. It looks a bit janky and it’s hard to plug and unplug but it works.</p>
 
-<aside><a href="board.jpg"><img src="board.jpg" alt="dat-ting PCB"></a></aside>
+<aside><a href="board.jpg"><img src="board.jpg" alt="dat ting PCB"></a></aside>
 
 <h2>CV In &amp; Out</h2>
 <p>There’s an important difference between the control voltage inputs and outputs on this module.
