--- a/site-files/synth/dat-ting/index.html
+++ b/site-files/synth/dat-ting/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-CA">
 <head>
-<title>dat-ting - Len’s Stuff</title>
+<title>dat ting - Len’s Stuff</title>
 <meta name="author" content="Len Popp">
 <link rel="license" href="#license">
 <meta charset="utf-8">
@@ -12,7 +12,7 @@
 <header>
 <hgroup>
 <a href="/"><img src="/assets/logo.jpg" class="logo" alt="home"></a>
-<h1>dat-ting</h1>
+<h1>dat ting</h1>
 <p>Multi-function DSP module with a Daisy Seed</p>
 </hgroup>
 <nav>
@@ -31,15 +31,15 @@
 
 <main>
 
-<aside><a href="dat-ting.jpg"><img src="dat-ting.jpg" alt="dat-ting module"></a></aside>
+<aside><a href="dat-ting.jpg"><img src="dat-ting.jpg" alt="dat ting module"></a></aside>
 
-<p><em>dat-ting</em> is a 10HP multi-function <a href="https://en.wikipedia.org/wiki/Eurorack">Eurorack</a> DSP module inspired by <a href="https://www.expert-sleepers.co.uk/disting.html">dis ting</a>.
+<p><em>dat ting</em> is a 10HP multi-function <a href="https://en.wikipedia.org/wiki/Eurorack">Eurorack</a> DSP module inspired by <a href="https://www.expert-sleepers.co.uk/disting.html">dis ting</a>.
 It’s based on an <a href="https://electro-smith.com/products/daisy-seed">Electrosmith Daisy Seed</a> microcontroller board.</p>
     
 <p>This module is part of my <a href="..">homebrew Eurorack synthesizer</a>. Hardware and software are open source. GitHub repository is <a href="https://github.com/Len42/dat-ting">here</a>.</p>
 
 <h1><a name="programs"></a>Programs</h1>
-<p><em>dat-ting</em> can run a variety of programs. It can act as a sound source, an audio processor, or a CV processor. Available programs include:</p>
+<p><em>dat ting</em> can run a variety of programs. It can act as a sound source, an audio processor, or a CV processor. Available programs include:</p>
 <ul>
 <li>Variable-shape VCO</li>
 <li>Synth Drums</li>
@@ -71,7 +71,7 @@ It’s based on an <a href="https://electro-smith.com/products/daisy-seed">Elect
 <h1><a name="firmware"></a><a href="firmware.html">Firmware</a></h1>
 
 <h1><a name="license"></a>License</h1>
-<p>The <em>dat-ting</em> module is open source hardware.
+<p>The <em>dat ting</em> module is open source hardware.
 The hardware design is published under the <a href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution license</a>.
 Firmware and software are published under the <a href="https://github.com/Len42/Dexy/blob/main/firmware/LICENSE">MIT license</a>.</p>
 
