--- a/site-files/synth/index.html
+++ b/site-files/synth/index.html
@@ -58,7 +58,7 @@ project and source file.</p>
 <aside><a href="../assets/synth-photo.jpg"><img src="../assets/synth-photo.jpg" alt="Modular synthesizer"></a></aside>
 <p>These are the modules that I have built.</p>
 <dl class="inline">
-    <dt><a href="dat-ting">dat-ting</a></dt>
+    <dt><a href="dat-ting">dat ting</a></dt>
     <dd>Multi-function DSP module with a Daisy Seed</dd>
     <dt><a href="dexy">Dexy</a></dt>
     <dd>DX7-inspired FM synthesis with a Raspberry Pi Pico</dd>
