Synth: dat ting PCB links

--- a/site-files/synth/dat-ting/hardware.html
+++ b/site-files/synth/dat-ting/hardware.html
@@ -81,10 +81,9 @@ The CV inputs are bipolar, meaning they can accept a positive or negative input 
 
 <p>The PCBs that I designed for this module can be ordered from <a href="https://oshpark.com/profiles/Len">OSH Park</a>:</p>
 <ul>
-    <li>TODO</li>
-<li><a href="https://oshpark.com/shared_projects/zzz">Main board</a></li>
-<li><a href="https://oshpark.com/shared_projects/zzz">Controls board</a></li>
-<li><a href="https://oshpark.com/shared_projects/zzz">Front panel</a></li>
+<li><a href="https://oshpark.com/shared_projects/AowQfGkG">Main board</a></li>
+<li><a href="https://oshpark.com/shared_projects/TdzyVupI">Controls board</a></li>
+<li><a href="https://oshpark.com/shared_projects/fQYMJEIx">Front panel</a></li>
 </ul>
 
 <p><a href="https://github.com/Len42/dat-ting/blob/main/hardware/bom.csv">A parts list is here.</a></p>
