--- a/site-files/index.html
+++ b/site-files/index.html
@@ -84,13 +84,9 @@
 <h1><a name="presentations" href="presentations">Presentations</h1></a>
 
 <h1><a name="misc"></a>Other Stuff</h1>
-<aside><img src="assets/mini-200.jpg" alt="Berond"></aside>
 <dl>
-    <dt><a href="https://www.worldanvil.com/w/earthship-ark-lenp">Earthship Ark</a></dt>
-    <dd>World-building for an RPG campaign based on
-        <a href="https://www.imdb.com/title/tt0069638/"><cite>The Starlost</cite></a></dd>
-    <dt><a href="https://www.obsidianportal.com/profile/Len17">Obsidian Portal</a></dt>
-    <dd>Various RPG campaigns I’ve played</dd>
+    <dt><a href="rpg">Tabletop Gaming</a></dt>
+    <dd>RPGs et cetera</dd>
     <dt><a href="https://flickr.com/photos/lenp17/">flickr</a></dt>
     <dd>Photos of things</dd>
 </dl>
