--- a/site-files/rpg/index.html
+++ b/site-files/rpg/index.html
@@ -37,7 +37,7 @@
         from <a href="https://enpublishingrpg.com/">EN Publishing</a>
     </dd>
     <dt><a href="https://www.worldanvil.com/w/earthship-ark-lenp">Earthship Ark</a></dt>
-    <dd>Player and setting info for a homebrew RPG campaign based on
+    <dd>Homebrew setting for an RPG campaign based on
         <a href="https://www.imdb.com/title/tt0069638/"><cite>The Starlost</cite></a></dd>
     <dt><a href="https://www.obsidianportal.com/profile/Len17">Obsidian Portal</a></dt>
     <dd>Various RPG campaigns I’ve played in over the years</dd>
