SSL certs in CircuitPython - wip

--- a/site-files/dev/rp2040-adc-accuracy.html
+++ b/site-files/dev/rp2040-adc-accuracy.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-CA">
 <head>
-<title>RP2040 ADC Accuracy - Len’s Stuff</title>
+<title>RP2040 Note: ADC Accuracy - Len’s Stuff</title>
 <meta name="author" content="Len Popp">
 <link rel="license" href="#license">
 <meta charset="utf-8">
@@ -12,7 +12,7 @@
 <header>
 <hgroup>
 <a href="/"><img src="/assets/logo.jpg" class="logo" alt="home"></a>
-<h1>RP2040 ADC Accuracy</h1>
+<h1>RP2040 Note: ADC Accuracy</h1>
 <p>Getting the most out of an analog-to-digital converter</p>
 </hgroup>
 <nav>
