--- a/site-files/dev/rp2040-dev-setup.html
+++ b/site-files/dev/rp2040-dev-setup.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-CA">
 <head>
-<title>RP2040 Windows Dev Setup - Len’s Stuff</title>
+<title>RP2040 Note: Windows Dev Setup - Len’s Stuff</title>
 <meta name="author" content="Len Popp">
 <link rel="license" href="#license">
 <meta charset="utf-8">
@@ -12,7 +12,7 @@
 <header>
 <hgroup>
 <a href="/"><img src="/assets/logo.jpg" class="logo" alt="home"></a>
-<h1>RP2040 Windows Dev Setup</h1>
+<h1>RP2040 Note: Windows Dev Setup</h1>
 <p>C/C++ dev environment for the Raspberry Pi Pico and RP2040, on Windows</p>
 </hgroup>
 <nav>
@@ -34,7 +34,7 @@
 <p><em>Note:</em> These instructions are up to date as of 2022-04-24.</p>
 
 <h2>Acknowledgements</h2>
-<p>These instructions mostly follow these video tutorials by <cite>Learn Embedded Systems</cite>:</p>
+<p>These instructions mostly follow the video tutorials by <cite>Learn Embedded Systems</cite>:</p>
 <ul>
 <li><a href="https://www.youtube.com/watch?v=mUF9xjDtFfY"><cite>How to Set Up Visual Studio Code to Program the Pi Pico</cite></a></li>
 <li><a href="https://www.youtube.com/watch?v=Q1Kfg8k54jM"><cite>How to Set Up a Project in Visual Studio Code for the Pi Pico</cite></a></li>
