SSL certs in CircuitPython

--- a/site-files/dev/cp-ssl-certs.html
+++ b/site-files/dev/cp-ssl-certs.html
@@ -13,7 +13,7 @@
 <hgroup>
 <a href="/"><img src="/assets/logo.jpg" class="logo" alt="home"></a>
 <h1>CircuitPython Note: SSL Root CAs</h1>
-<p>How to fix SSL certificate validation errors in CircuitPython</p>
+<p>How to fix SSL certificate verification errors in CircuitPython</p>
 </hgroup>
 <nav>
 <!--nav button--><label for="navCheck">&nbsp;</label><input type="checkbox" id="navCheck">
