--- a/site-files/index.html
+++ b/site-files/index.html
@@ -65,7 +65,7 @@
     <dt><a href="dev/rp2040-adc-accuracy.html">RP2040: ADC Accuracy</a></dt>
     <dd>Getting the most out of an analog-to-digital converter</dd>
     <dt><a href="dev/cp-ssl-certs.html">CircuitPython: SSL Root CAs</a></dt>
-    <dd>How to fix SSL certificate validation errors in CircuitPython</dd>
+    <dd>How to fix SSL certificate verification errors in CircuitPython</dd>
 </dl>
 
 <h2>Software Utilities</h2>
