--- a/site-files/index.html
+++ b/site-files/index.html
@@ -58,12 +58,14 @@
 <h1><a name="programming"></a>Programming</h1>
 <aside><img src="assets/code-sidebar.jpg" alt="source code screenshot"></aside>
 <dl>
-    <dt><a href="dev/rp2040-dev-setup.html">RP2040 Windows Development Setup</a></dt>
-    <dd>How to set up a C/C++ development environment for the <a href="https://www.raspberrypi.com/documentation/microcontrollers/raspberry-pi-pico.html">Raspberry Pi Pico</a> and other RP2040 dev boards on Windows</dd>
-    <dt><a href="dev/rp2040-adc-accuracy.html">RP2040 ADC Accuracy</a></dt>
-    <dd>Getting the most out of an analog-to-digital converter</dd>
     <dt><a href="https://github.com/Len42/">GitHub</a></dt>
         <dd>My GitHub <a href="https://github.com/Len42/">repos</a> and <a href="https://gist.github.com/Len42">gists</a></dd>
+    <dt><a href="dev/rp2040-dev-setup.html">RP2040: Windows Development Setup</a></dt>
+    <dd>How to set up a C/C++ development environment for the <a href="https://www.raspberrypi.com/documentation/microcontrollers/raspberry-pi-pico.html">Raspberry Pi Pico</a> and other RP2040 dev boards on Windows</dd>
+    <dt><a href="dev/rp2040-adc-accuracy.html">RP2040: ADC Accuracy</a></dt>
+    <dd>Getting the most out of an analog-to-digital converter</dd>
+    <dt><a href="dev/cp-ssl-certs.html">CircuitPython: SSL Root CAs</a></dt>
+    <dd>How to fix SSL certificate verification errors in CircuitPython</dd>
 </dl>
 
 <h2>Software Utilities</h2>
