Add a comment about SSL certs in CircuitPython

--- a/site-files/projects/asentry/index.html
+++ b/site-files/projects/asentry/index.html
@@ -138,6 +138,8 @@ CIRCUITPY_WIFI_PASSWORD = "MyNetworkPassword"
 
 <p>Several CircuitPython libraries are used which are not included in the base CircuitPython distribution. These libraries are included in the firmware download (<a href="#download">see above</a>).</p>
 
+<p><a href="/dev/cp-ssl-certs.html">See here</a> for info about problems that can happen when making HTTPS web requests from CircuitPython.</p>
+
 <p>Thanks to <a href="https://github.com/jepler">jepler</a> for the <code>WrappedTextDisplay</code> class, borrowed from
 <a href="https://learn.adafruit.com/generating-text-with-chatgpt-pico-w-circuitpython/coding-the-text-generator">here.</a></p>
 
