presentations page - change formatting, add some stuff

--- a/site-files/presentations/index.html
+++ b/site-files/presentations/index.html
@@ -28,13 +28,14 @@
     <p><em>Note: The PDF versions of these presentations may have some ugly formatting. Sorry!</em></p>
     <dl>
         <dt>A Simple Task Scheduler For Microcontrollers</dt>
-        <dd>Demonstrates some “modern” C++ techniques
-            [<a href="https://github.com/Len42/presentations/blob/main/TaskScheduler/TaskScheduler.pdf?raw=1">PDF</a>]
+        <dd>Demonstrates some “modern” C++ techniques on an embedded microcontroller.
+            <br>Presented at Ottawa C++, 2024-10-24
+            <br>[<a href="https://github.com/Len42/presentations/blob/main/TaskScheduler/TaskScheduler.pdf?raw=1">PDF</a>]
             [<a href="https://github.com/Len42/presentations/blob/main/TaskScheduler/TaskScheduler.pptx?raw=1">PowerPoint</a>]
         </dd>
         <dt>Automatic Build Version Numbering</dt>
         <dd>Version numbers are fun!
-            [<a href="https://github.com/Len42/presentations/blob/main/MakeVersionInfo/MakeVersionInfo.pdf?raw=1">PDF</a>]
+            <br>[<a href="https://github.com/Len42/presentations/blob/main/MakeVersionInfo/MakeVersionInfo.pdf?raw=1">PDF</a>]
             [<a href="https://github.com/Len42/presentations/blob/main/MakeVersionInfo/MakeVersionInfo.pptx?raw=1">PowerPoint</a>]
         </dd>
     </dl>
