minor fixes to synth/part-selection.html

--- a/site-files/synth/part-selection.html
+++ b/site-files/synth/part-selection.html
@@ -62,7 +62,7 @@ These are noted on the schematic.</p>
 <h2>Capacitors</h2>
 <p>
 Electrolytic capacitors should have a voltage rating of at least 25 V DC,
-unless otherwised noted.</p>
+unless otherwise noted.</p>
 
 <p>Decoupling caps for ICs are 100 nF ceramic, any make.</p>
 
@@ -88,7 +88,7 @@ supply can probably be substituted.</p>
 or substituted with parts that have the same footprint and physical dimensions.
 These parts are soldered directly to a PCB and also fixed to the front panel, so
 they have to fit properly. The components that I use are ones that are commonly
-used in the synth DIY community. I have tried to list multiple sources for these
+used in the DIY synth community. I have tried to list multiple sources for these
 in the BOM.</p>
 
 <p>The Alpha potentiometers are available with different shafts:
@@ -97,7 +97,7 @@ just make sure to get knobs that fit.</p>
 
 <h2>Knobs</h2>
 <p>Potentiometers need knobs, but I have not listed any in my BOMs because they
-are a matter of taste. They also need to fit the selected potentiometers
+are a matter of taste. They must fit the selected potentiometers
 (see above).</p>
 </main>
 
@@ -108,7 +108,7 @@ are a matter of taste. They also need to fit the selected potentiometers
             <img src="https://i.creativecommons.org/l/by/4.0/88x31.png" alt="Creative Commons Licence"/></a>
         </g-col>
         <g-col>
-            <div id="license">© 2022-2024 Len Popp<br>
+            <div id="license">© 2022-2025 Len Popp<br>
             This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.</div>
         </g-col>
     </g-row>
