--- a/site-files/projects/asentry/index.html
+++ b/site-files/projects/asentry/index.html
@@ -146,7 +146,7 @@ CIRCUITPY_WIFI_PASSWORD = "MyNetworkPassword"
 <h1><a name="case"></a>Case</h1>
 <p>I made a simple case out of heavy cardboard
 (<a href="https://www.amazon.ca/Grafix-CB121225-Chipboard-12-Inch-Natural/dp/B0013JRFUA?th=1">chipboard</a>),
-covered with with printed and painted decoration on
+covered with printed and painted decoration on
 <a href="https://www.avery.ca/en/avery-shipping-labels-with-trueblock-technology-for-laser-and-inkjet-printers-11inch-x-8-1-2inch-5265-rectangle-white.html">adhesive paper</a>,
 with <a href="https://www.amazon.ca/Swingline-SelfSeal-Adhesive-Laminating-3747308/dp/B00006IASA?th=1">clear adhesive lamination</a> for protection.</p>
 
