Healing potions page - wip

--- a/site-files/rpg/potions/index.html
+++ b/site-files/rpg/potions/index.html
@@ -28,8 +28,8 @@
 </header>
 
 <main>
-<h1><a name="intro"></a>Intro</h1>
-<p>Introduction.</p>
+<h1><a name="intro"></a>Overview</h1>
+<p>TODO</p>
 
 <h1><a name="main"></a>Main</h1>
 <p>Main section.</p>
