Healing potions page - wip

--- a/site-files/rpg/potions/index.html
+++ b/site-files/rpg/potions/index.html
@@ -18,24 +18,40 @@
 <nav>
 <!--nav button--><label for="navCheck">&nbsp;</label><input type="checkbox" id="navCheck">
 <ul>
-<li><a href="#intro">Intro</a></li>
-<li><a href="#main">Main</a></li>
-<li><a href="#conclusion">Conclusion</a></li>
-<li>Back to <a href=".">[x]</a></li>
+<li><a href="#intro">Overview</a></li>
+<li><a href="#materials">Materials</a></li>
+<li><a href="#tips">Tips</a></li>
 <li><a href="/">Home</a></li>
 </ul>
 </nav>
 </header>
 
 <main>
-<h1><a name="intro"></a>Overview</h1>
+<aside><img src="potion.jpg" alt="Potion bottle"></aside>
+<p><a name="intro"></a>I saw some nice
+<a href="https://static.wikia.nocookie.net/criticalrole/images/7/77/Potion_of_healing.jpg/revision/latest?cb=20211007155023">health potion props on Critical Role</a>
+so I made a few for my own D&amp;D group.</p>
+<p>Each potion is a glass bottle with some tinted epoxy resin and some dice inside.
+Potions can be handed out by the DM, and when a player wants to use one they open it and dump out the dice.</p>
+
+<h1><a name="materials"></a>Materials</h1>
+<p>Here are the materials needed to make these, with links to the particular ones I used.</p>
+<ul>
+<li>Glass bottles with corks/stoppers
+	(<a href="https://www.amazon.ca/dp/B07Z1YWHGP?ref=ppx_yo2ov_dt_b_fed_asin_title">link</a>
+	&ndash; These ones include corks and tags)</li>
+<li>Clear epoxy casting resin
+	(<a href="https://alumilite.com/products/amazing-deep-pour">link</a>)</li>
+<li>Pigment/ink/dye to colour the resin
+	(<a href="https://www.deserres.ca/products/3-pack-alcohol-inks-pink-red-spectrum?variant=40069299110021">link</a>
+	&ndash; This is alcohol-based ink)</li>
+<li>Dice (<a href="https://www.amazon.ca/dp/B0C1LCVXXT?ref=ppx_yo2ov_dt_b_fed_asin_title">link</a>)</li>
+<li>TODO labels, string, etc.</li>
+</ul>
+
+<h1><a name="tips"></a>Tips</h1>
 <p>TODO</p>
 
-<h1><a name="main"></a>Main</h1>
-<p>Main section.</p>
-
-<h1><a name="conclusion"></a>Conclusion</h1>
-<p>Final section.</p>
 </main>
 
 <footer><g-row><g-col style="width: 110px; vertical-align: middle">
