Healing potions page - wip

--- a/site-files/rpg/potions/index.html
+++ b/site-files/rpg/potions/index.html
@@ -46,11 +46,11 @@ Potions can be handed out by the DM, and when a player wants to use one they ope
 	(<a href="https://www.deserres.ca/products/3-pack-alcohol-inks-pink-red-spectrum?variant=40069299110021">link</a>
 	&ndash; This is alcohol-based ink)</li>
 <li>Dice (<a href="https://www.amazon.ca/dp/B0C1LCVXXT?ref=ppx_yo2ov_dt_b_fed_asin_title">link</a>)</li>
-<li>TODO labels, string, etc.</li>
+<li>Tags and string, or stick-on labels</li>
 </ul>
 
 <h1><a name="tips"></a>Tips</h1>
-<p>TODO</p>
+<p>TODO: resin, ink, label</p>
 
 </main>
 
