Healing potions page - wip

--- a/site-files/rpg/potions/index.html
+++ b/site-files/rpg/potions/index.html
@@ -50,7 +50,10 @@ Potions can be handed out by the DM, and when a player wants to use one they ope
 </ul>
 
 <h1><a name="tips"></a>Tips</h1>
-<p>TODO: resin, ink, label</p>
+<p>The bottles must have mouths that are wide enough to easily dump the dice out.</p>
+<p>The epoxy resin only fills the bottom part of the bottle about 4 cm (1.5 in) deep, leaving plenty of room for the dice.
+The resin must be a type that can be poured to that depth. Some casting resin is limited to thin layers. The resin that I linked above works well.</p>
+<p>TODO: ink</p>
 
 </main>
 
